[gd_scene load_steps=2 format=3 uid="uid://elst0xn32iil"]

[ext_resource type="Script" uid="uid://b77ac11abyrmo" path="res://scenes/game.gd" id="1_80nbo"]

[node name="Game" type="Node2D"]
script = ExtResource("1_80nbo")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -58.0
offset_right = 100.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Score:"

[node name="ScoreInput" type="LineEdit" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type int..."
virtual_keyboard_type = 2

[node name="StartButton" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="FinishButton" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
text = "Finish"

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/FinishButton" to="." method="_on_finish_button_pressed"]
